src/test/resources/typeSystemTestModels/valid/statements/ReturnTypeAssignmentIsValid.java
package typeSystemTestModels.valid.statements;

import java.lang.Integer;

public class ReturnTypeAssignmentIsValid {

  public void test(){

  }

  public int test3(){
    return 1;
  }

}
